test_step done (first val_run has 0.45 acc)

--- a/main.ipynb
+++ b/main.ipynb
@@ -258,9 +258,9 @@
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x15ac93050>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x31844a950>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x169d62b90>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x30fe41fd0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x30fe7a9d0>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x1431e6250>)"
       ]
      },
      "execution_count": 6,
@@ -312,17 +312,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "special tokens: 1\n",
-      "categories: 7\n",
-      "continuos: 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.tab_transformer.tab_model import SAINT\n",
     "from src.data_setup import continuous_columns, categorical_columns\n",
@@ -354,31 +344,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.20878607223472412, 0.916206646438696)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.tab_transformer.tab_train import train_step\n",
+    "from src.tab_transformer.tab_train import train_step, test_step\n",
     "\n",
     "loss_fn = nn.CrossEntropyLoss().to(device)\n",
     "optimizer = torch.optim.AdamW(saint.parameters(),lr=0.0001, betas=(0.9, 0.999), weight_decay=0.01)\n",
     "\n",
-    "train_step(model=saint,\n",
-    "           dataloader=train_dataloader,\n",
-    "           loss_fn=loss_fn,\n",
-    "           optimizer=optimizer,\n",
-    "           device=device\n",
-    ")\n",
-    "                              "
+    "# train_step(model=saint,\n",
+    "#            dataloader=train_dataloader,\n",
+    "#            loss_fn=loss_fn,\n",
+    "#            optimizer=optimizer,\n",
+    "#            device=device\n",
+    "# )\n",
+    "\n",
+    "val_step = test_step(model=saint,\n",
+    "                     dataloader=val_dataloader,\n",
+    "                     loss_fn=loss_fn,\n",
+    "                     device=device)\n",
+    "\n",
+    "val_step"
    ]
   }
  ],
