Tensorboard SummaryWriter setup

--- a/main.ipynb
+++ b/main.ipynb
@@ -344,19 +344,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.004248567015291697, 0.4513805220883534)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.tab_transformer.tab_train import train_step, test_step\n",
     "\n",
     "loss_fn = nn.CrossEntropyLoss().to(device)\n",
     "optimizer = torch.optim.AdamW(saint.parameters(),lr=0.0001, betas=(0.9, 0.999), weight_decay=0.01)\n",
     "\n",
-    "# train_step(model=saint,\n",
-    "#            dataloader=train_dataloader,\n",
-    "#            loss_fn=loss_fn,\n",
-    "#            optimizer=optimizer,\n",
-    "#            device=device\n",
-    "# )\n",
+    "train_step(model=saint,\n",
+    "           dataloader=train_dataloader,\n",
+    "           loss_fn=loss_fn,\n",
+    "           optimizer=optimizer,\n",
+    "           device=device\n",
+    ")\n",
     "\n",
     "val_step = test_step(model=saint,\n",
     "                     dataloader=val_dataloader,\n",
@@ -364,6 +375,74 @@
     "                     device=device)\n",
     "\n",
     "val_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = SummaryWriter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_writer(experiment_name: str,\n",
+    "                  model_name: str,\n",
+    "                  extra: str=None) -> torch.utils.tensorboard.writer.SummaryWriter():\n",
+    "\n",
+    "                  from datetime import datetime\n",
+    "                  import os\n",
+    "\n",
+    "                  timestamp = datetime.now().strftime(\"%Y-%m-%d--%H:%M:%S\")\n",
+    "\n",
+    "                  if extra:\n",
+    "                       log_dir = os.path.join(\"runs\", timestamp, experiment_name, model_name, extra) # Create the log directory path\n",
+    "                  else:\n",
+    "                       log_dir = os.path.join(\"runs\", timestamp, experiment_name, model_name) # Create the log directory path\n",
+    "\n",
+    "                  print(f\"[INFO] Created SummaryWriter, saving to: {log_dir}\")\n",
+    "                  return SummaryWriter(log_dir=log_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "from helper_functions import set_seeds\n",
+    "from src.tab_transformer.tab_train import train\n",
+    "\n",
+    "set_seeds(42)\n",
+    "\n",
+    "\n",
+    "train(model=saint,\n",
+    "      train_dataloader=train_dataloader,\n",
+    "      val_dataloader=val_dataloader,\n",
+    "      test_dataloader=test_dataloader,\n",
+    "      optimizer=optimizer,\n",
+    "      loss_fn=loss_fn,\n",
+    "      epochs=10,\n",
+    "      writer=create_writer(experiment_name=\"first_run\",\n",
+    "                                   model_name=\"saint\")\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir runs"
    ]
   }
  ],
