Embedding device fix, and google collab clone added

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,6 +9,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The following code is only for Google Collab whenever wanting to perform runs there\n",
+    "# !git clone https://github.com/Aaron-Serpilin/DeepSummit.git\n",
+    "# !pip install --upgrade pip\n",
+    "# !pip install -e ."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
