First Successful Tabular Run (0.9202 test_acc)

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +270,12 @@
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x30fe41fd0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x30fe7a9d0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x1431e6250>)"
+       "(<torch.utils.data.dataloader.DataLoader at 0x31b27b290>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x3164f8150>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x31b27a310>)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,13 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.004248567015291697, 0.4513805220883534)"
+       "(0.0005842532558613513, 0.9128137550200803)"
       ]
      },
      "execution_count": 10,
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +424,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Created SummaryWriter, saving to: runs/2025-04-23--17:33:24/first_run/saint\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 1/10 [05:01<45:11, 301.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 | train_loss: 0.1886 | train_acc: 0.9252 | test_loss: 0.0008 | test_acc: 0.9183\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 2/10 [09:49<39:08, 293.62s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 2 | train_loss: 0.1860 | train_acc: 0.9254 | test_loss: 0.0007 | test_acc: 0.9170\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|███       | 3/10 [14:13<32:40, 280.11s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 3 | train_loss: 0.1818 | train_acc: 0.9277 | test_loss: 0.0008 | test_acc: 0.9189\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 4/10 [18:50<27:53, 279.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 4 | train_loss: 0.1781 | train_acc: 0.9295 | test_loss: 0.0009 | test_acc: 0.9157\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 5/10 [23:32<23:19, 279.99s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 5 | train_loss: 0.1766 | train_acc: 0.9283 | test_loss: 0.0009 | test_acc: 0.9202\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 6/10 [28:44<19:22, 290.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 6 | train_loss: 0.1738 | train_acc: 0.9305 | test_loss: 0.0007 | test_acc: 0.9172\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 7/10 [33:21<14:19, 286.51s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 7 | train_loss: 0.1693 | train_acc: 0.9322 | test_loss: 0.0008 | test_acc: 0.9192\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 8/10 [37:50<09:21, 280.84s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 8 | train_loss: 0.1666 | train_acc: 0.9328 | test_loss: 0.0005 | test_acc: 0.9168\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 9/10 [42:25<04:39, 279.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 9 | train_loss: 0.1633 | train_acc: 0.9338 | test_loss: 0.0006 | test_acc: 0.9140\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [47:06<00:00, 282.61s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10 | train_loss: 0.1603 | train_acc: 0.9356 | test_loss: 0.0007 | test_acc: 0.9147\n",
+      "CPU times: user 1h 37min 16s, sys: 27min 29s, total: 2h 4min 45s\n",
+      "Wall time: 47min 6s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'train_loss': [0.18862296600337983,\n",
+       "  0.18602193555800267,\n",
+       "  0.181752410843542,\n",
+       "  0.17810713039873818,\n",
+       "  0.176648545670828,\n",
+       "  0.17383407515961766,\n",
+       "  0.16925857581215045,\n",
+       "  0.16661058767160108,\n",
+       "  0.1633284955933488,\n",
+       "  0.1602522330709273],\n",
+       " 'train_acc': [0.9252192593905032,\n",
+       "  0.9253576807228916,\n",
+       "  0.927734375,\n",
+       "  0.9295310838944011,\n",
+       "  0.9282783708362864,\n",
+       "  0.9304931121545005,\n",
+       "  0.9321583207831325,\n",
+       "  0.9328172063253012,\n",
+       "  0.9338055346385542,\n",
+       "  0.9356174698795181],\n",
+       " 'val_loss': [0.0005662141435117606,\n",
+       "  0.0005597891847053206,\n",
+       "  0.0005514946687652404,\n",
+       "  0.0005323321794170931,\n",
+       "  0.0006148527903729174,\n",
+       "  0.0003084733364093735,\n",
+       "  0.0003268823296908873,\n",
+       "  0.0010838294962802566,\n",
+       "  0.0005407305097723581,\n",
+       "  0.00048101495906531093],\n",
+       " 'val_acc': [0.9141315261044177,\n",
+       "  0.9120732931726908,\n",
+       "  0.9167796184738956,\n",
+       "  0.9060491967871486,\n",
+       "  0.9175326305220883,\n",
+       "  0.9184864457831325,\n",
+       "  0.9179216867469879,\n",
+       "  0.9073544176706827,\n",
+       "  0.9109437751004016,\n",
+       "  0.9147088353413655],\n",
+       " 'test_loss': [0.0007675058511366327,\n",
+       "  0.0006990632019847272,\n",
+       "  0.0008218576570591295,\n",
+       "  0.0009248704615845738,\n",
+       "  0.0008618514760431037,\n",
+       "  0.0006728816373520587,\n",
+       "  0.0007738303168710456,\n",
+       "  0.0005470019237822797,\n",
+       "  0.0006315280425261302,\n",
+       "  0.0007081661059195737],\n",
+       " 'test_acc': [0.9182860474154684,\n",
+       "  0.916968276331131,\n",
+       "  0.9188508064516129,\n",
+       "  0.9156505052467936,\n",
+       "  0.9201685775359503,\n",
+       "  0.9171565293431791,\n",
+       "  0.9192273124757093,\n",
+       "  0.9167860959968908,\n",
+       "  0.9139562281383599,\n",
+       "  0.9147092401865526]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "from helper_functions import set_seeds\n",
@@ -449,9 +675,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-3a7cc138ff9586d0\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-3a7cc138ff9586d0\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_ext tensorboard\n",
     "%tensorboard --logdir runs"
