Added plot_loss_curves helper function (need to rerun the model to get plots)

--- a/main.ipynb
+++ b/main.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
     "set_seeds(42)\n",
     "\n",
     "\n",
-    "train(model=saint,\n",
+    "results = train(model=saint,\n",
     "      train_dataloader=train_dataloader,\n",
     "      val_dataloader=val_dataloader,\n",
     "      test_dataloader=test_dataloader,\n",
@@ -671,6 +671,17 @@
     "      writer=create_writer(experiment_name=\"first_run\",\n",
     "                                   model_name=\"saint\")\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helper_functions import plot_loss_curves\n",
+    "\n",
+    "plot_loss_curves(results)"
    ]
   },
   {
