Initial met_transformer layout

--- a/main.ipynb
+++ b/main.ipynb
@@ -266,24 +266,12 @@
       "[INFO] Test set saved to: data/himalayas_data/test/test.csv\n",
       "[INFO] Himalaya Data has already been processed\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x31b27b290>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x3164f8150>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x31b27a310>)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.data_setup import train_dataloader, val_dataloader, test_dataloader\n",
+    "from src.tab_transformer.tab_data_setup import load_himalayan_data\n",
     "\n",
-    "train_dataloader, val_dataloader, test_dataloader"
+    "train_dataloader, val_dataloader, test_dataloader = load_himalayan_data()"
    ]
   },
   {
@@ -322,13 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.tab_transformer.tab_model import SAINT\n",
-    "from src.data_setup import continuous_columns, categorical_columns\n",
     "import numpy as np\n",
+    "\n",
+    "categorical_columns = ['SEX', 'CITIZEN', 'STATUS', 'MO2USED', 'MROUTE1', 'SEASON', 'O2USED']\n",
+    "continuous_columns = ['CALCAGE', 'HEIGHTM', 'MDEATHS', 'HDEATHS', 'SMTMEMBERS', 'SMTHIRED']\n",
     "\n",
     "# Returns the amount of unique values per categorical column\n",
     "cat_dims = [len(np.unique(df_train[col])) for col in categorical_columns]\n",
@@ -341,7 +331,7 @@
     "    dim_out = 1,                       \n",
     "    depth = 6,                       \n",
     "    heads = 8,  \n",
-    "    num_special_tokens=1,                       \n",
+    "    num_special_tokens=1,                      \n",
     "    attn_dropout = 0.1,             \n",
     "    ff_dropout = 0.1,                  \n",
     "    mlp_hidden_mults = (4, 2),       \n",
@@ -354,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +660,7 @@
     "      epochs=10,\n",
     "      writer=create_writer(experiment_name=\"first_run\",\n",
     "                                   model_name=\"saint\")\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -686,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
