Update of main.ipynb to run on GPU

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Setup\n",
+    "\n",
+    "The following section of the notebook covers all relevant imports required for the project. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +53,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mlextend version: 0.23.4\n"
+      "mlextend version: 0.23.4\n",
+      "[INFO] Couldn't find pygrib... installing it\n"
      ]
     }
    ],
@@ -138,7 +148,14 @@
     "except ImportError:\n",
     "    print(\"[INFO] Couldn't find einops... installing it\")\n",
     "    !pip install -q einops\n",
-    "    from einops import rearrange, repeat\n"
+    "    from einops import rearrange, repeat\n",
+    "\n",
+    "try:\n",
+    "    import pygrib\n",
+    "except ImportError:\n",
+    "    print(\"[INFO] Couldn't find pygrib... installing it\")\n",
+    "    !pip install -q pygrib\n",
+    "    import pygrib\n"
    ]
   },
   {
@@ -160,6 +177,15 @@
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Himalayan Data Setup\n",
+    "\n",
+    "The following section covers the retrieval and processing of the tabular data from the Himalayan Database that will use the SAINT architecture to carry out inference. The raw data was obtained through the `get_data.py` file. "
    ]
   },
   {
@@ -253,6 +279,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `load_himalayan_data()` function defined within the `tab_data_setup` file transforms the raw data from .DBF to .csv, filters the relevant features, filters the relevant peaks, develops a data frame with this data, and then creates the corresponding train, val, and test splits by using the `create_dataloaders()` helper function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -272,6 +305,15 @@
     "from src.tab_transformer.tab_data_setup import load_himalayan_data\n",
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = load_himalayan_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. SAINT Model instantiation\n",
+    "\n",
+    "The following section instantiates the SAINT model architecture based on the hyperparameter selection defined in the relevant paper. This is broken down in the `tab_breakdown.ipynb` file where the core equations and backbone of the architecture is explained. "
    ]
   },
   {
@@ -340,6 +382,15 @@
     "    final_mlp_style = 'sep',\n",
     "    y_dim = 2 # Binary classification\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. SAINT Model Training\n",
+    "\n",
+    "The following section trains the SAINT model with the `TabularDataset` class while saving the corresponding files in the `runs` directory using the `SummaryWriter()` setup."
    ]
   },
   {
@@ -664,6 +715,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a `test_acc` of ~92%, the SAINT Model architecture achieves better results than the benchmark Regression model from the Julia project. Therefore, prior to fine tuning the model, and without the incorporation of contextual meteorological data, the model already has a better performance than the baseline. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -709,6 +767,45 @@
    "source": [
     "%load_ext tensorboard\n",
     "%tensorboard --logdir runs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Era5 Data Setup\n",
+    "\n",
+    "The following section covers the data preparation of the era5 dataset. The raw data was obtained through the `get_data.py` file. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The entire data setup from the era5 dataset is condensed into the `load_era5_data` function, which does multiple things. \n",
+    "\n",
+    "Firstly, it uses`file_to_grib()` to convert all the raw era5 files into .grib files, which facilitate it for processing afterwards. \n",
+    "\n",
+    "This is followed by `get_variable_mapping()` which obtains the corresponding mapping of the internal grib abbreviations and the actual features from the era5 dataset. This is used to then filter out the desired features when we transform the .grib file into a .csv file. \n",
+    "\n",
+    "For convenience, we can run `get_variable_mapping()` each time, but in this study case the mapping doesn't change every time. Therefore, we can store the result of the first run in a variable and then merely refer to it, which saves up ~3 minutes of runtime.  \n",
+    "\n",
+    "This mapping is this passed as a parameter to `process_grib_to_csv()` to filter out the desired features and convert the .grib files to .csv, storing them in `data/era5_data/instances/raw_instances`.\n",
+    "\n",
+    "Afterwards, due to the API request limitations, the original requests in `get_data.py` were done in batches of 5 years, leading to each mountain to have 17 different weather data files. Therefore, in order to condense them, we then use `merge_daily_instances()` which condenses all of these files into a single .csv file in `data/era5_data/instances/merged_instances`. \n",
+    "\n",
+    "The final step of the function is to then use `build_event_instances()` to create the final ML table by the weather and tabular data are matched based on their `date` and `peakid`. It then creates the instances with the target variable from the tabular dataset, and also adds the relevant 7-day context window to analyze the weather trends that affect summit probabilities. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.met_transformer.met_data_setup import load_era5_data\n",
+    "\n",
+    "load_era5_data()"
    ]
   }
  ],
