--- a/main.ipynb
+++ b/main.ipynb
@@ -805,7 +805,12 @@
    "source": [
     "from src.met_transformer.met_data_setup import load_era5_data\n",
     "\n",
-    "load_era5_data()"
+    "ml_table = load_era5_data()\n",
+    "instances_output_path = Path('data/era5_data/instances')\n",
+    "instances_output_path.mkdir(parents=True, exist_ok=True)\n",
+    "ml_table_output_file = instances_output_path / 'ml_table.csv'\n",
+    "ml_table.to_csv(ml_table_output_file, index=False)\n",
+    "print(f\"Wrote {len(ml_table)} event instances to {ml_table_output_file}\")"
    ]
   }
  ],
