Refactoring of load_era5_data to be flag-based since it tackles all the data preparation

--- a/main.ipynb
+++ b/main.ipynb
@@ -802,14 +802,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from src.met_transformer.met_data_setup import load_era5_data\n",
+    "from src.met_transformer.met_data_setup import load_era5_data\n",
     "\n",
-    "# ml_table = load_era5_data()\n",
-    "# instances_output_path = Path('data/era5_data/instances')\n",
-    "# instances_output_path.mkdir(parents=True, exist_ok=True)\n",
-    "# ml_table_output_file = instances_output_path / 'ml_table.csv'\n",
-    "# ml_table.to_csv(ml_table_output_file, index=False)\n",
-    "# print(f\"Wrote {len(ml_table)} event instances to {ml_table_output_file}\")"
+    "weather_df = load_era5_data()\n",
+    "output_path = Path('data/era5_data')\n",
+    "output_path.mkdir(parents=True, exist_ok=True)\n",
+    "output_file = output_path / \"era5_data.csv\"\n",
+    "weather_df.to_csv(output_file, index=False)\n",
+    "\n",
+    "print(weather_df.shape)\n",
+    "print(weather_df.head)"
    ]
   }
  ],
