Added images in breakdowns. Starting Stormer breakdown.

--- a/main.ipynb
+++ b/main.ipynb
@@ -1342,7 +1342,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The original tabular dataset had 53102 rows. However, when creating the new weather dataset by joining the tabular instances, we now have 52638 rows, and 444 features. The reason for the drop in the rows is because of our 7-day context. Whenever there were instances where there was not sufficient context days, said instances were dropped. "
+    "The original tabular dataset had 53102 rows. However, when creating the new weather dataset by joining the tabular instances, we now have 52638 rows, and 444 features. The reason for the drop in the rows is because of our 7-day context. Whenever there were instances where there was not sufficient context days, said instances were dropped. \n",
+    "\n",
+    "For reference, due to the significant amount of columns and rows, below is the file size for the complete weather data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete era5 weather data file size: 421 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "era5_data_csv_size = Path(\"data/era5_data/era5_data.csv\").stat().st_size // (1024*1024)\n",
+    "print(f\"Complete era5 weather data file size: {era5_data_csv_size} MB\")"
    ]
   }
  ],
