--- a/src/met_transformer/met_breakdown.ipynb
+++ b/src/met_transformer/met_breakdown.ipynb
@@ -5,9 +5,9 @@
    "id": "5990135c",
    "metadata": {},
    "source": [
-    "# Architecture Breakdown of Conformer Architecture\n",
+    "# Architecture Breakdown of Stormer Architecture\n",
     "\n",
-    "The following notebook is designed to break down the different elements of the Conformer architecture as documentation for the development of the code, and the corresponding customizations. "
+    "The following notebook is designed to break down the different elements of the Stormer architecture as documentation for the development of the code, and the corresponding customizations. "
    ]
   },
   {
@@ -18,10 +18,17 @@
     "## Acknowledgments \n",
     "\n",
     "The content of the breakdown is based on the following public repos:\n",
-    "* **Conformer**: https://github.com/sooftware/conformer/tree/main\n",
-    "\n",
-    "Similarly, beyond using Conformer as the backbone of this architecture, various elements from the Stormer architecture will also be incorporated, that will also be acknowledged:\n",
     "* **Stormer**: https://github.com/tung-nd/Stormer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c09992a",
+   "metadata": {},
+   "source": [
+    "## Stormer Architecture\n",
+    "\n",
+    "<img src=\"stormer_architecture.png\" alt=\"Stormer Architecture\">"
    ]
   },
   {
@@ -29,7 +36,25 @@
    "id": "8994f404",
    "metadata": {},
    "source": [
-    "## Conformer Equations"
+    "## Equations\n",
+    "\n",
+    "The Stormer pipeline is described by the following equations found through sections 3 and 4 of the paper. \n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(\\theta)=\\mathbb{E}_{\\delta t \\sim P(\\delta t),\\left(X_0, X_{\\delta t}\\right) \\sim \\mathcal{D}}\\left[\\left\\|f_\\theta\\left(X_0, \\delta t\\right)-\\Delta_{\\delta t}\\right\\|_2^2\\right]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(\\theta)=\\mathbb{E}\\left[\\frac{1}{V H W} \\sum_{v=1}^V \\sum_{i=1}^H \\sum_{j=1}^W w(v) L(i)\\left(\\widehat{\\Delta}_{\\delta t}^{v i j}-\\Delta_{\\delta t}^{v i j}\\right)^2\\right]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(\\theta)=\\mathbb{E}\\left[\\frac{1}{V H W} \\sum_{v=1}^V \\sum_{i=1}^H \\sum_{j=1}^W w(v) L(i)\\left(\\widehat{\\Delta}_{\\delta t}^{v i j}-\\Delta_{\\delta t}^{v i j}\\right)^2\\right]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L}(\\theta)=\\mathbb{E}\\left[\\frac{1}{K V H W} \\sum_{k=1}^K \\sum_{v=1}^V \\sum_{i=1}^H \\sum_{j=1}^W w(v) L(i)\\left(\\widehat{\\Delta}_{k \\delta t}^{v i j}-\\Delta_{k \\delta t}^{v i j}\\right)^2\\right]\n",
+    "$$\n"
    ]
   },
   {
@@ -37,7 +62,7 @@
    "id": "e5dc5f00",
    "metadata": {},
    "source": [
-    "### Conformer Architecture Stages"
+    "### Stormer Architecture Stages"
    ]
   }
  ],
