--- a/src/tab_transformer/tab_breakdown.ipynb
+++ b/src/tab_transformer/tab_breakdown.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Architecture Breakdown of SAINT Architecture\n",
+    "# Architecture Breakdown of SAINT\n",
     "\n",
     "The following notebook is designed to break down the different elements of the SAINT architecture as documentation for the development of the code, and the corresponding customizations. \n",
     "\n"
@@ -22,6 +22,15 @@
     "Similarly, various utilities from the SAINT paper were borrowed from the following repo, that will also be acknowledged:\n",
     "* **Tab Transformer PyTorch**: https://github.com/lucidrains/tab-transformer-pytorch\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SAINT Architecture\n",
+    "\n",
+    "<img src=\"saint_architecture.png\" alt=\"SAINT Architecture\">\n"
    ]
   },
   {
