--- a/main.ipynb
+++ b/main.ipynb
@@ -1320,12 +1320,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 5. Stormer Model Instantiation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Following the creation of the appropriate .csv file for training purposes, we can now leverage `set_splits()` and `create_dataloaders()` to instantiate our splits and dataloaders. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1368,6 +1375,325 @@
     "    }\n",
     "\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:tensor([[[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
+      "           0.0000e+00,  0.0000e+00],\n",
+      "         [ 6.5173e-01,  1.2417e+00, -4.3863e-01,  ..., -2.4609e-01,\n",
+      "          -3.6939e-01, -2.2189e-01],\n",
+      "         [-1.0356e+00,  2.1229e-01, -1.3761e+00,  ...,  3.0409e-02,\n",
+      "          -1.7427e+00, -1.2453e+00],\n",
+      "         ...,\n",
+      "         [-1.8576e-01,  3.1744e-01,  1.6698e+00,  ..., -1.5728e+00,\n",
+      "           1.2466e+00, -8.0171e-01],\n",
+      "         [-1.0311e+00,  1.0291e+00,  5.3802e-01,  ...,  2.3632e-01,\n",
+      "           5.1275e-01, -5.3551e-01],\n",
+      "         [-6.6958e-01,  1.3771e-01,  2.6588e-01,  ...,  1.1656e-01,\n",
+      "          -2.1039e-02, -6.4147e-01]],\n",
+      "\n",
+      "        [[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
+      "           0.0000e+00,  0.0000e+00],\n",
+      "         [ 1.6604e+00,  7.2365e-01, -8.2749e-01,  ...,  6.2606e-02,\n",
+      "          -4.6838e-01, -8.3781e-02],\n",
+      "         [ 1.2404e+00,  8.9119e-01, -1.4263e+00,  ...,  7.9239e-02,\n",
+      "          -2.8526e-01,  1.9393e-01],\n",
+      "         ...,\n",
+      "         [ 1.5794e+00,  1.6596e+00, -1.3332e+00,  ..., -1.0169e-01,\n",
+      "           3.5838e-01,  3.3822e-01],\n",
+      "         [ 7.0613e-01,  1.8868e+00, -1.5048e+00,  ...,  2.3512e-01,\n",
+      "          -4.3430e-01,  4.9652e-01],\n",
+      "         [-1.2910e+00,  1.9976e+00, -1.1251e+00,  ...,  1.1748e+00,\n",
+      "          -3.2328e+00,  2.5355e+00]],\n",
+      "\n",
+      "        [[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
+      "           0.0000e+00,  0.0000e+00],\n",
+      "         [-4.1737e-01,  3.5444e-01,  7.2983e-01,  ...,  2.3898e+00,\n",
+      "           6.0348e-01,  7.5959e-02],\n",
+      "         [ 6.5665e-01,  5.9769e-02,  1.6879e+00,  ..., -1.4657e-01,\n",
+      "           1.7388e+00, -9.9266e-01],\n",
+      "         ...,\n",
+      "         [ 2.6749e+00,  3.6793e-01,  5.5740e-01,  ..., -2.2809e-01,\n",
+      "           3.0479e-01,  1.5028e-01],\n",
+      "         [ 2.2293e+00,  7.4325e-01,  7.5388e-02,  ..., -7.2210e-02,\n",
+      "          -3.3602e-01, -1.9829e-01],\n",
+      "         [ 1.7263e+00, -4.5494e-01, -3.1326e-01,  ...,  6.0588e-02,\n",
+      "          -3.1476e-01, -2.4728e-01]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
+      "           0.0000e+00,  0.0000e+00],\n",
+      "         [-4.2993e-01, -1.7857e+00, -9.1676e-02,  ..., -2.3489e-03,\n",
+      "          -3.6746e-01, -2.7970e-01],\n",
+      "         [ 9.2539e-03, -1.4796e+00, -1.6976e-01,  ..., -1.4684e-01,\n",
+      "          -3.5641e-01,  2.7827e-02],\n",
+      "         ...,\n",
+      "         [-1.1277e+00, -1.3963e+00, -1.1063e+00,  ...,  1.2528e+00,\n",
+      "           1.3702e+00, -4.4385e-03],\n",
+      "         [-1.5480e+00, -6.2796e-01,  1.3932e+00,  ...,  5.7033e-01,\n",
+      "          -3.7259e-02, -3.3156e-01],\n",
+      "         [-1.0404e+00, -2.4127e+00,  8.4847e-01,  ...,  7.3372e-01,\n",
+      "           2.7885e-01, -4.2085e-01]],\n",
+      "\n",
+      "        [[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
+      "           0.0000e+00,  0.0000e+00],\n",
+      "         [-6.3943e-01,  1.0645e+00, -1.2558e-01,  ..., -5.0351e+00,\n",
+      "          -3.0185e+00,  4.4428e+00],\n",
+      "         [-4.6471e-01,  1.2895e+00,  1.1117e+00,  ..., -8.1886e-01,\n",
+      "           3.8311e-01, -2.4790e-01],\n",
+      "         ...,\n",
+      "         [ 2.6693e-01,  4.1938e-01, -8.2503e-01,  ..., -3.3494e-01,\n",
+      "           5.9263e-01, -3.4021e-01],\n",
+      "         [ 1.7087e-01,  5.2829e-01, -1.2067e+00,  ..., -1.9060e-01,\n",
+      "           2.7118e-01,  2.1823e-02],\n",
+      "         [-4.8693e-01,  1.6045e-01, -6.9867e-01,  ...,  2.5044e-01,\n",
+      "           2.6429e-01, -1.1577e-01]],\n",
+      "\n",
+      "        [[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
+      "           0.0000e+00,  0.0000e+00],\n",
+      "         [ 8.3997e-02, -7.7714e-01,  7.0186e-01,  ...,  3.8435e-01,\n",
+      "           1.9893e-01, -3.6301e-01],\n",
+      "         [-1.5817e-01,  7.4295e-01, -5.5065e-01,  ...,  5.9925e-01,\n",
+      "           1.5606e-02,  2.3463e-01],\n",
+      "         ...,\n",
+      "         [-7.4788e-01,  2.8664e-01, -1.1585e-01,  ..., -8.9194e-01,\n",
+      "           1.2336e+00, -4.3743e-01],\n",
+      "         [-1.1298e+00, -1.1420e+00,  1.0877e-01,  ..., -1.4613e-01,\n",
+      "           6.1661e-01, -7.9647e-01],\n",
+      "         [-1.0473e+00, -1.7262e+00, -1.2819e-01,  ...,  1.0468e+00,\n",
+      "           2.3556e+00, -3.7553e-01]]])\n",
+      "mask: tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1]])\n",
+      "y: tensor([1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1,\n",
+      "        0, 1, 0, 1, 0, 1, 1, 0])\n",
+      "window_batch: tensor([[[1, 1, 0,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [1, 1, 1,  ..., 1, 0, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 1]],\n",
+      "\n",
+      "        [[1, 1, 0,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [1, 1, 1,  ..., 1, 0, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 1]],\n",
+      "\n",
+      "        [[1, 1, 0,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [1, 1, 1,  ..., 1, 0, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 1]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[1, 1, 0,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [1, 1, 1,  ..., 1, 0, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 1]],\n",
+      "\n",
+      "        [[1, 1, 0,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [1, 1, 1,  ..., 1, 0, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 1]],\n",
+      "\n",
+      "        [[1, 1, 0,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         [1, 1, 1,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [1, 1, 1,  ..., 1, 0, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 0],\n",
+      "         [1, 1, 1,  ..., 1, 1, 1]]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_batch, mask_batch, y_batch, window_batch = next(iter(weather_train_dataloader))\n",
+    "\n",
+    "print(f\"X:{X_batch}\\nmask: {mask_batch}\\ny: {y_batch}\\nwindow_batch: {window_batch}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X: tensor([[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00],\n",
+      "        [ 6.5173e-01,  1.2417e+00, -4.3863e-01,  7.0930e-01,  9.8064e-01,\n",
+      "          8.1256e-01,  8.1019e-01,  4.4492e-01, -3.8491e-01,  9.7116e-02,\n",
+      "          1.0955e-01, -3.7368e-01, -2.7304e-01, -1.3466e+00, -5.2404e-01,\n",
+      "         -3.9062e-01,  4.8028e-01, -1.1316e+00,  1.2126e+00,  7.2876e-01,\n",
+      "          0.0000e+00, -3.5188e-01, -1.4366e-01,  7.6444e-02,  5.3076e-01,\n",
+      "          2.1690e-02, -2.0041e-01, -7.1406e-03,  9.6246e-01,  1.0629e-01,\n",
+      "         -8.6612e-01,  9.5781e-01,  1.9664e-02,  9.5552e-02,  3.0024e-01,\n",
+      "          3.1204e-01, -2.0453e-01,  9.1961e-01, -1.9579e-01,  7.2965e-03,\n",
+      "         -2.2119e-01, -4.5262e-01,  3.6130e-01, -2.3945e-01, -3.3185e-01,\n",
+      "          9.7590e-02,  9.1517e-01,  5.8145e-01,  8.9075e-01,  2.2908e-02,\n",
+      "         -3.7801e-01, -2.6881e-01, -2.4609e-01, -3.6939e-01, -2.2189e-01],\n",
+      "        [-1.0356e+00,  2.1229e-01, -1.3761e+00, -1.1114e+00,  3.2878e-01,\n",
+      "          6.0572e-01,  5.4109e-01,  3.3108e-01, -3.7136e-01, -5.4810e-01,\n",
+      "         -5.0348e-01, -3.3489e-01, -2.4452e-01, -2.7646e-01, -1.4227e-01,\n",
+      "         -1.2482e+00, -3.5068e-01,  1.9917e-01,  0.0000e+00,  1.4411e-01,\n",
+      "          0.0000e+00,  4.7113e-01, -3.2628e-01, -2.9792e-01, -2.4872e-01,\n",
+      "         -2.6057e-01, -3.2099e-01,  5.5693e-01,  1.0209e+00, -4.1291e-01,\n",
+      "         -5.4711e-02,  1.0116e+00, -5.0100e-01, -7.9512e-02,  2.9050e-01,\n",
+      "          3.2341e-01, -3.5483e-01,  6.4619e-01, -1.8879e-01,  1.7597e-01,\n",
+      "          4.9374e-01, -2.7927e-01,  1.3882e+00,  7.6469e-04, -1.8539e-01,\n",
+      "         -4.7052e-01,  8.5812e-01, -1.0880e+00,  2.5302e-01,  1.7624e-01,\n",
+      "         -3.1157e-01, -3.6529e-01,  3.0409e-02, -1.7427e+00, -1.2453e+00],\n",
+      "        [-3.1129e-01,  2.1760e+00,  4.7752e-02, -3.2780e-01,  2.2315e+00,\n",
+      "          8.3618e-01,  1.0434e+00,  1.0023e-01, -1.9490e-01, -4.9469e-01,\n",
+      "         -3.9913e-01, -3.1580e-01, -2.7471e-01,  2.7584e-01,  7.7212e-01,\n",
+      "          1.2046e-01,  9.5982e-02, -8.8485e-01,  1.2375e+00,  4.5876e-01,\n",
+      "          0.0000e+00,  6.6594e-01, -3.3975e-01, -3.4769e-01,  1.4428e-01,\n",
+      "         -3.0227e-01, -2.9104e-01, -2.6573e-01,  5.2568e-01, -3.9624e-01,\n",
+      "         -6.3697e-02,  5.3773e-01, -4.9245e-01,  8.3276e-01,  5.9840e-01,\n",
+      "          3.3258e-01, -3.6556e-01,  7.6904e-01, -1.9458e-01,  1.5174e-01,\n",
+      "          5.6339e-01,  4.5789e+00,  8.4624e-01,  5.8849e-02,  1.7766e+00,\n",
+      "         -4.7252e-01,  6.0376e-01, -3.5745e-01,  2.4998e+00,  2.8910e+00,\n",
+      "          2.4848e+00, -2.5790e+00, -4.2619e-01, -4.5175e-01, -1.5191e-02],\n",
+      "        [-1.3011e+00, -1.1096e-01,  3.1492e-01, -1.2785e+00, -5.4104e-01,\n",
+      "         -2.4607e-01,  4.4818e-01,  2.3368e-01, -6.6920e-01,  6.4710e+00,\n",
+      "          4.5700e+00, -4.0316e-01, -3.2853e-01,  4.0250e-01, -6.3242e-02,\n",
+      "          2.6918e-01,  5.7510e-01,  1.0456e+00, -6.6232e-01,  7.4290e-01,\n",
+      "          0.0000e+00, -5.8769e-01, -2.5154e-01, -1.9191e-01,  3.6779e-01,\n",
+      "          1.2198e-02, -2.2715e-01, -6.2947e-01,  8.6190e-01,  1.8608e+00,\n",
+      "         -8.0799e-01,  9.4718e-01,  2.7276e+00, -1.3713e+00,  4.0492e-01,\n",
+      "          3.3890e-01, -3.0859e-01,  3.4131e-01, -1.9724e-01,  4.1611e-02,\n",
+      "         -6.1446e-01, -2.9524e-01, -3.5869e-01, -2.2818e-01, -2.2717e-01,\n",
+      "          2.9103e+00,  4.5920e-01, -1.2928e+00, -8.1388e-01,  3.8604e-02,\n",
+      "         -1.3903e-01, -3.6079e-01, -5.5385e-01, -4.9176e-01, -1.7720e-01],\n",
+      "        [-1.2249e+00, -2.1983e+00, -4.7175e-01, -1.2220e+00, -1.4207e+00,\n",
+      "         -1.8793e-01,  4.9471e-01,  7.3239e-01, -4.9618e-01, -3.5004e-01,\n",
+      "         -2.8765e-01, -3.3249e-01, -2.9222e-01, -9.2177e-02, -6.5427e-01,\n",
+      "         -4.4840e-01, -8.2832e-01,  9.6380e-02,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00, -1.6149e+00, -3.6336e-01, -3.1184e-01, -9.8594e-01,\n",
+      "         -2.6337e-01, -3.4421e-01, -7.0179e-01,  5.7734e-01, -3.1990e-01,\n",
+      "         -1.6850e+00,  6.0206e-01, -3.9904e-01, -2.2424e+00,  3.9805e-01,\n",
+      "          3.4527e-01, -3.9890e-01,  2.5128e-02, -2.0967e-01, -2.2556e-01,\n",
+      "         -1.5515e+00, -4.4141e-01, -6.8976e-01, -1.9009e-01, -2.2401e-01,\n",
+      "         -3.7314e-01,  2.4137e-01, -1.3435e+00, -8.9187e-01, -2.7039e-02,\n",
+      "         -3.7003e-01, -2.3724e-01,  4.3033e-02, -2.3341e-01, -4.6511e-01],\n",
+      "        [-1.8576e-01,  3.1744e-01,  1.6698e+00,  3.6775e-02,  5.2578e-01,\n",
+      "          7.5671e-01,  5.2476e-01,  1.1326e+00,  5.4585e-01, -4.5386e-02,\n",
+      "         -3.8244e-01, -3.4691e-01, -1.9305e-01, -2.2187e-01, -6.3715e-01,\n",
+      "          1.7710e+00, -7.4996e-01, -2.8103e-01, -6.8564e-01,  5.9482e-01,\n",
+      "          0.0000e+00,  6.8899e-02, -4.1198e-01, -2.7283e-01, -8.9929e-01,\n",
+      "         -2.4604e-01, -3.6664e-01,  1.4465e+00,  4.2434e-01, -3.1766e-01,\n",
+      "         -2.2481e+00,  4.5148e-01, -2.7855e-01,  8.2795e-01,  3.3909e-01,\n",
+      "          3.4588e-01, -4.4527e-01,  6.5901e-01, -1.7837e-01, -3.2122e-01,\n",
+      "          4.0164e-01,  1.1726e-02,  7.4415e-01, -1.3661e-01, -4.6539e-02,\n",
+      "         -2.3444e-01,  7.3188e-01, -7.5200e-02,  4.7777e-01,  7.5041e-02,\n",
+      "          9.7058e-02, -3.1123e-01, -1.5728e+00,  1.2466e+00, -8.0171e-01],\n",
+      "        [-1.0311e+00,  1.0291e+00,  5.3802e-01, -1.2542e+00,  8.4624e-01,\n",
+      "         -5.9781e-02,  3.6026e-01,  7.7054e-01, -2.1696e-01,  2.3297e+00,\n",
+      "          2.0269e+00, -4.0142e-02,  1.8234e+00, -9.2312e-01, -7.0921e-01,\n",
+      "          4.9376e-01,  8.0889e-01,  1.7935e-01,  9.1986e-01,  8.5916e-01,\n",
+      "          0.0000e+00, -9.0126e-01,  1.7078e+00,  3.7542e-01,  1.0124e+00,\n",
+      "          4.7259e-02,  1.1270e+00,  1.0973e-01,  6.9828e-01,  8.9523e-01,\n",
+      "         -9.3224e-01,  6.8595e-01,  9.7374e-01,  1.1879e-01,  6.1111e-02,\n",
+      "          3.3916e-01,  1.4147e+00,  2.9885e-01,  1.5039e+00, -1.0942e-02,\n",
+      "         -7.2177e-01, -3.0627e-01,  5.9128e-01, -1.5388e-01, -1.2780e-01,\n",
+      "          1.1522e+00, -6.0994e-02, -1.3196e+00,  7.0654e-01, -9.5001e-02,\n",
+      "         -2.9978e-01, -2.4175e-01,  2.3632e-01,  5.1275e-01, -5.3551e-01],\n",
+      "        [-6.6958e-01,  1.3771e-01,  2.6588e-01, -7.0349e-01, -1.3981e-03,\n",
+      "          9.8823e-03,  3.5448e-01,  3.2875e-01, -3.2795e-01, -5.0617e-01,\n",
+      "         -4.6742e-01, -3.5232e-01, -2.8246e-01, -8.1541e-01, -7.3254e-01,\n",
+      "          3.3523e-01, -7.6692e-01, -1.7050e+00,  3.5721e-01,  4.5725e-01,\n",
+      "          0.0000e+00, -8.7321e-01,  8.3074e-03, -9.7818e-02, -6.1099e-01,\n",
+      "         -1.5939e-01, -9.6624e-02, -7.1306e-02,  4.0065e-01, -2.4549e-01,\n",
+      "         -4.9537e-01,  4.2140e-01, -2.9554e-01, -2.5583e-01,  1.8374e-01,\n",
+      "          3.4341e-01, -6.3796e-02,  6.1444e-02, -2.2979e-01,  6.7566e-02,\n",
+      "         -8.4547e-01, -3.7514e-01,  4.6137e-01, -1.8818e-01, -2.2012e-01,\n",
+      "         -2.4679e-01, -2.2113e-01, -7.6325e-01, -1.2952e-01, -6.2913e-02,\n",
+      "         -2.8898e-01, -2.7453e-01,  1.1656e-01, -2.1039e-02, -6.4147e-01]])\n",
+      "mask: tensor([1, 1, 1, 1, 1, 1, 1, 1, 1])\n",
+      "y: 1\n",
+      "window: tensor([[1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First instance\n",
+    "X_instance = X_batch[0]\n",
+    "mask_instance = mask_batch[0]\n",
+    "y_instance = y_batch[0]\n",
+    "window_instance = window_batch[0]\n",
+    "\n",
+    "print(f\"X: {X_instance}\\nmask: {mask_instance}\\ny: {y_instance}\\nwindow: {window_instance}\\n\")"
    ]
   }
  ],
